
  * Fixed '1x' snapshot mode; TV effects are now disabled.  This mode
    now generates a clean, pixel-exact image.

  * A ROM properties file may now be placed next to the ROM (with the same
    name as the ROM, except ending in .pro), and Stella will automatically
    apply the properties to the ROM. [NOTE: this was present in 6.2, but
    was mistakenly left out of the changelog]

  * Allow changing custom palette and TV effects adjustables in 1% steps
    again.

  * Updated documentation for changes in ROM properties key names.

  * The codebase now compiles under gcc6 again.  Future versions will
    require gcc7, though.

-Have fun!


6.1.2 to 6.2: (June 7, 2020)

  * Added interactive palette to Video & Audio settings.

  * Added 'Custom' palette, generated from user controlled phase shifts.

  * Added that adjustable audio & video settings are displayed as gauge bars.

  * Added four global hotkeys which allow selecting and changing numerous
    audio & video settings without having to remember the dedicated hotkeys.

  * Added 'Turbo' mode, runs the game as fast as the computer allows.

  * Added that paddle centering (per ROM) and sensitivity can be adjusted.

  * Added that mouse sensitivity for Driving controller can be adjusted.

  * Added paddle filtering in UI to avoid unwanted navigation events.

  * Added selectable dialog fonts.

  * Added separate positioning of launcher, emulator and debugger.

  * Added optional display to game refresh rate adaption in fullscreen mode.

  * Added option which lets default ROM path follow launcher navigation.

  * Added debugger 'saveaccess' function, which saves memory access counts to
    a CSV file.

  * Added displaying last write address in the debugger.

  * Added debugger pseudo-register '_scanend', which gives the number of
    scanlines at the end of the last frame.

  * Added detection of color and audio data in DiStella.

  * Restored 'cfg' directory for Distella config files.
