@@ -158,6 +158,15 @@ class Dialog : public GuiObject
                                    const string& defaultsText = "Defaults",
                                    bool focusOKButton = true);
 
+    // NOTE: This method, and the two above it, are due to be refactored at some
+    //       point, since the parameter list is kind of getting ridiculous
+    void addDefaultsExtraOKCancelBGroup(WidgetArray& wid, const GUI::Font& font,
+                                        const string& extraText, int extraCmd,
+                                        const string& okText = "OK",
+                                        const string& cancelText = "Cancel",
+                                        const string& defaultsText = "Defaults",
+                                        bool focusOKButton = true);
+
     void processCancelWithoutWidget(bool state) { _processCancel = state; }
     virtual void processCancel() { close(); }
 
